# video-modality-diagnostics

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/sample/: videoqa.jsonl
notebooks/: diagnostics_colab.ipynb  video_vlm_colab.ipynb
paper/: references.bib  report.tex
scripts/: plot_results.py  prepare_nextqa.py  run_diagnostic.py
src/vmd/: __init__.py  backends.py  config.py  data.py  diagnose.py  metrics.py  modalities.py  report.py  video.py
tests/: test_video.py  test_vmd.py
