[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "video-modality-diagnostics"
version = "0.1.0"
description = "Diagnose which modalities a video model actually uses: modality ablations, blind language-prior baseline, contribution scores and robustness probes."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Marcos Lahoz" }]
dependencies = []

[project.optional-dependencies]
vlm = ["transformers>=4.40", "torch>=2.0", "accelerate>=0.30"]
video = ["transformers>=4.49", "torch>=2.0", "accelerate>=0.30",
         "opencv-python-headless>=4.8", "pillow>=10",
         "pandas>=2.0", "pyarrow>=14", "huggingface_hub>=0.23"]
dev = ["pytest>=7.0", "matplotlib>=3.7", "pillow>=10"]

[tool.setuptools.packages.find]
where = ["src"]
